--- a/qtfuzzylite/ui/Surface2D.ui
+++ b/qtfuzzylite/ui/Surface2D.ui
@@ -21,7 +21,7 @@
      </property>
      <widget class="QFrame" name="verticalFrame">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
