--- a/qtfuzzylite/ui/About.ui
+++ b/qtfuzzylite/ui/About.ui
@@ -145,7 +145,7 @@ There are still many things to do!&lt;/p&gt;
              <item>
               <widget class="QLabel" name="generosity">
                <property name="sizePolicy">
-                <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
                  <horstretch>0</horstretch>
                  <verstretch>0</verstretch>
                 </sizepolicy>
@@ -170,6 +170,9 @@ There are still many things to do!&lt;/p&gt;
                </property>
                <property name="scaledContents">
                 <bool>true</bool>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignCenter</set>
                </property>
                <property name="margin">
                 <number>0</number>
