--- a/qtfuzzylite/ui/Window.ui
+++ b/qtfuzzylite/ui/Window.ui
@@ -47,7 +47,7 @@
      <number>0</number>
     </property>
     <property name="bottomMargin">
-     <number>6</number>
+     <number>12</number>
     </property>
     <item>
      <widget class="QToolBox" name="tab_container">
@@ -63,7 +63,7 @@
          <x>0</x>
          <y>0</y>
          <width>588</width>
-         <height>410</height>
+         <height>397</height>
         </rect>
        </property>
        <attribute name="label">
@@ -87,6 +87,9 @@
         </property>
         <item>
          <layout class="QFormLayout" name="formLayout">
+          <property name="fieldGrowthPolicy">
+           <enum>QFormLayout::ExpandingFieldsGrow</enum>
+          </property>
           <property name="topMargin">
            <number>0</number>
           </property>
@@ -98,7 +101,14 @@
            </widget>
           </item>
           <item row="0" column="1">
-           <widget class="QLineEdit" name="led_name"/>
+           <widget class="QLineEdit" name="led_name">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+           </widget>
           </item>
          </layout>
         </item>
@@ -111,12 +121,6 @@
            <enum>QFrame::Sunken</enum>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_3">
-           <property name="spacing">
-            <number>6</number>
-           </property>
-           <property name="margin">
-            <number>9</number>
-           </property>
            <item>
             <widget class="QSplitter" name="spl_VarsRules">
              <property name="orientation">
@@ -323,6 +327,9 @@
                </property>
                <item>
                 <layout class="QHBoxLayout" name="horizontalLayout_7">
+                 <property name="spacing">
+                  <number>6</number>
+                 </property>
                  <property name="topMargin">
                   <number>0</number>
                  </property>
@@ -469,8 +476,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>216</width>
-         <height>249</height>
+         <width>588</width>
+         <height>397</height>
         </rect>
        </property>
        <attribute name="label">
@@ -498,9 +505,6 @@
            <enum>QFrame::Sunken</enum>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_6">
-           <property name="margin">
-            <number>9</number>
-           </property>
            <item>
             <widget class="QSplitter" name="spl_control_inout_rules">
              <property name="orientation">
@@ -586,8 +590,8 @@
                        <rect>
                         <x>0</x>
                         <y>0</y>
-                        <width>100</width>
-                        <height>30</height>
+                        <width>259</width>
+                        <height>86</height>
                        </rect>
                       </property>
                       <property name="sizePolicy">
@@ -706,8 +710,8 @@
                        <rect>
                         <x>0</x>
                         <y>0</y>
-                        <width>100</width>
-                        <height>30</height>
+                        <width>258</width>
+                        <height>86</height>
                        </rect>
                       </property>
                       <property name="sizePolicy">
@@ -895,7 +899,7 @@
      <x>0</x>
      <y>0</y>
      <width>588</width>
-     <height>25</height>
+     <height>22</height>
     </rect>
    </property>
    <property name="defaultUp">
