--- a/qtfuzzylite/ui/Window.ui
+++ b/qtfuzzylite/ui/Window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>588</width>
-    <height>543</height>
+    <height>547</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -63,7 +63,7 @@
          <x>0</x>
          <y>0</y>
          <width>588</width>
-         <height>397</height>
+         <height>408</height>
         </rect>
        </property>
        <attribute name="label">
@@ -476,8 +476,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>588</width>
-         <height>397</height>
+         <width>216</width>
+         <height>249</height>
         </rect>
        </property>
        <attribute name="label">
@@ -590,8 +590,8 @@
                        <rect>
                         <x>0</x>
                         <y>0</y>
-                        <width>259</width>
-                        <height>86</height>
+                        <width>100</width>
+                        <height>30</height>
                        </rect>
                       </property>
                       <property name="sizePolicy">
@@ -710,8 +710,8 @@
                        <rect>
                         <x>0</x>
                         <y>0</y>
-                        <width>258</width>
-                        <height>86</height>
+                        <width>100</width>
+                        <height>30</height>
                        </rect>
                       </property>
                       <property name="sizePolicy">
@@ -899,7 +899,7 @@
      <x>0</x>
      <y>0</y>
      <width>588</width>
-     <height>22</height>
+     <height>25</height>
     </rect>
    </property>
    <property name="defaultUp">
@@ -1192,6 +1192,18 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+2</string>
+   </property>
+  </action>
+  <action name="actionFollowOnTwitter">
+   <property name="icon">
+    <iconset resource="qtfuzzylite.qrc">
+     <normaloff>:/twitter.png</normaloff>:/twitter.png</iconset>
+   </property>
+   <property name="text">
+    <string>&amp;Follow @fuzzylite</string>
+   </property>
+   <property name="toolTip">
+    <string>Follow @fuzzylite on Twitter</string>
    </property>
   </action>
  </widget>
