--- a/qtfuzzylite/ui/qtfuzzylite.qrc
+++ b/qtfuzzylite/ui/qtfuzzylite.qrc
@@ -1,6 +1,7 @@
 <RCC>
   <qresource>
     <file alias="swap.png">icons/mail-send-receive.png</file>
+    <file alias="twitter.png">icons/twitter-bird-light-bgs.png</file>
     <file alias="surface2d-generate.png">icons/applications-graphics.png</file>
     <file alias="community.png">icons/podcast-new.png</file>
     <file alias="surface2d.png">icons/surface2d.png</file>
