--- a/qtfuzzylite/ui/Surface2D.ui
+++ b/qtfuzzylite/ui/Surface2D.ui
@@ -553,7 +553,7 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_4">
      <item>
-      <widget class="QFrame" name="horizontalFrame">
+      <widget class="QFrame" name="horizontalFrame1">
        <property name="frameShape">
         <enum>QFrame::Box</enum>
        </property>
